# pika

./: .gitignore  AGENTS.md  Cargo.toml  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  Makefile  PERFORMANCE_FIXES.md  QUICK_START.md  README.md  SECURITY.md  STATUS.md  TUNNEL.md  cloudflared-pi.service  cloudflared-pi.user.service  config.toml  config.toml.example  pi-agent-manager.service  pika.service  pika.user.service  prd-frontend-fixes.json  prd.json  prd.md  progress.txt
.github/workflows/: ci.yml
.sisyphus/plans/: frontend-refactor.md
deploy/: cloudflared-pi.service  pi-agent-manager.service  pika-tunnel.service.example  pika.service  pika.user.service  setup-deployment.sh
docs/: DEPLOYMENT.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  MOBILE_TEST_REPORT.md  QUICK_START.md  REVIEW_FIXES_SUMMARY.md  STATUS.md
frontend/: Cargo.toml  index.html
frontend-web/: .env  .env.example  eslint.accessibility.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend-web/docs/: ACCESSIBILITY_AUDIT.md  PWA_SETUP.md
frontend-web/e2e/: README.md  app.spec.ts
frontend-web/public/: debug.html  diagnostics.js  manifest.json  sw.js
frontend-web/src/: App.tsx  index.css  main.tsx
frontend-web/src/components/: AppHeader.tsx  AuthPrompt.tsx  ChatInput.tsx  CommandPalette.tsx  DiffViewer.tsx  ErrorBoundary.tsx  MobileHeaderMenu.tsx  (+11 more)
frontend/src/: app.rs  lib.rs  main.rs  sessions.rs  websocket.rs
frontend/src/sessions/: chat_input.rs  history.rs
src/: agent.rs  api.rs  auth.rs  config.rs  file_watcher.rs  lib.rs  main.rs  metrics.rs  pi.rs  rate_limit.rs  sessions.rs  static_files.rs  websocket.rs
src/api/: auth.rs  projects.rs  routes.rs  sessions.rs  settings.rs  types.rs
static/: index.html
static/assets/: index-Dh5_4BhR.js  index-DjYK94vD.css
tasks/web-frontend-replace-svx87/: prd-web-frontend-replace.md  prd.json  progress.txt
tests/: api_integration_test.rs
(+64 files in other folders)
