[package]
name = "pi-agent-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
futures = "0.3"
mime_guess = "2.0"
dirs = "5.0"
chrono = "0.4"
base64 = "0.22"
