[package]
name = "pika-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.41", features = ["sync", "time", "rt", "rt-multi-thread"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
  "BinaryType",
]
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.tokio-tungstenite]
version = "0.24"
features = ["native-tls"]
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[features]
default = []
wasm = ["web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]
desktop = ["tokio-tungstenite", "futures-util"]

[profile.release]
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = "thin"

[profile.distribution]
inherits = "release"
codegen-units = 1
lto = "fat"
